// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatReportToMarkdown() renders a standard report 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4s, 431.2ms | passed |  |
| | | 7s | | |"
`;

exports[`formatReportToMarkdown() renders a standard report with touched files 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4s, 431.2ms | passed |  |
| | | 7s | | |

### Touched files
<details><summary>View files list</summary><div>

\`\`\`
packages/example/src/index.ts
apps/web/src/index.tsx
\`\`\`

</div></details>"
`;

exports[`formatReportToMarkdown() renders attempts and flakiness 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed | **FLAKY**, 3 attempts |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed | 2 attempts |
| 🟥 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | failed | 3 attempts |
| | | 7s | | |"
`;

exports[`formatReportToMarkdown() renders durations 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟪 | \`RunTarget(types:build)\` | 0s | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m, 2s, 380.2ms | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 1m, 4s, 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 34s, 431.2ms | passed |  |
| | | 33m, 41s | | |"
`;

exports[`formatReportToMarkdown() renders errors 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟥 | \`RunTarget(types:build)\` | 0s | failed | Something weird has happened |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m, 2s, 380.2ms | passed |  |
| | | 32m, 2s | | |"
`;

exports[`formatReportToMarkdown() renders with git commit 1`] = `
"<!-- moon-run-report -->
### Run report for [59719f96](https://github.com/moonrepo/moon/pull/123/commits/59719f967ddcf585da9bc7ba8730dcd2865cbdfa)
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4s, 431.2ms | passed |  |
| | | 7s | | |"
`;

exports[`sortReport() sorts by label 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4s, 431.2ms | passed |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| | | 7s | | |"
`;

exports[`sortReport() sorts by time 1`] = `
"<!-- moon-run-report -->
### Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(website:typecheck)\` | 4s, 431.2ms | passed |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2s, 380.2ms | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| | | 7s | | |"
`;
